add avatr to header
